--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   A Doc site for our home systems
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://johnmwaura08.github.io/"
 
 github:
   username: github_username # change to your github username
